force-app/main/default/objects/RE_MY_CostPriceHistory__c/RE_MY_CostPriceHistory__c.object-meta.xml
<CustomObject>
    <label>Cost Price History</label>
    <nameField>
        <displayFormat>RE-MY-CH{000000}</displayFormat>
        <label>Costing Name History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Price History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>