force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Price Deleted</label>
    <type>Checkbox</type>
</CustomField>