force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Cost Price Last Modified By ID</inlineHelpText>
    <label>Cost Price Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_Price_History1</relationshipName>
    <type>Lookup</type>
</CustomField>