force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/Master_Covamo__c.field-meta.xml
<CustomField>
    <fullName>Master_Covamo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Covamo</label>
    <type>Checkbox</type>
</CustomField>