force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/Parent_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Parent_RecordId__c</fullName>
    <label>Cost Price Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>