force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Breakbulk_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_Breakbulk_Premium__c</fullName>
    <label>Breakbulk Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>