force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Brand_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Brand_Discount__c</fullName>
    <label>Brand Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>