force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_CanadianDailyRack_DEX__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_CanadianDailyRack_DEX__c</fullName>
    <label>CanadianDailyRack DEX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>