force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Final_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Final_Value__c</fullName>
    <label>Final Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>