force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Group__c</fullName>
    <description>Branded or Unbranded Group</description>
    <label>Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>