force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Is_only_applicable_to_SFJ__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Is_only_applicable_to_SFJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is only applicable to SFJ?</label>
    <type>Checkbox</type>
</CustomField>