force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Location_Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Location_Abbreviated_Name__c</fullName>
    <formula>RE_Depot_Name__r.RE_Abbreviated_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Abbreviated Name</label>
    <type>Text</type>
</CustomField>