force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Net_Move_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Net_Move_Value__c</fullName>
    <formula>RE_CND_Final_Value__c - RE_CND_Old_Base_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Move Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>