force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_NewRack_Or_NewBAPP_File__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_NewRack_Or_NewBAPP_File__c</fullName>
    <label>NewRack Or NewBAPP File?</label>
    <length>7</length>
    <type>Text</type>
</CustomField>