force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_PA__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_PA__c</fullName>
    <label>PA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>