force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_PA_Product_code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_PA_Product_code__c</fullName>
    <label>PA Product code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>