force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Parent_Rack__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Parent_Rack__c</fullName>
    <label>Parent Rack</label>
    <length>100</length>
    <type>Text</type>
</CustomField>