force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Rack_Prices_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack_Prices_Product__c</fullName>
    <label>Rack Prices Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>