force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Required_CanadianDailyRack7Day__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Required_CanadianDailyRack7Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required CanadianDailyRack7Day?</label>
    <type>Checkbox</type>
</CustomField>