force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Required_in_OPIS_Comparison__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Required_in_OPIS_Comparison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required in OPIS Comparison?</label>
    <type>Checkbox</type>
</CustomField>