force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Supplier1_Difference__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Supplier1_Difference__c</fullName>
    <formula>IF(RE_CND_Supplier1_Price__c &gt; 0, RE_CND_Final_Value__c -  RE_CND_Supplier1_Price__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff of Esso Canada</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>