force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_CND_Supplier1_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Supplier1_Price__c</fullName>
    <description>Revolution Canada Competitor Esso Canada Price</description>
    <label>Esso Canada</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>