force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Depot_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot_Code__c</fullName>
    <formula>RE_Depot_Name__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depot Code</label>
    <type>Text</type>
</CustomField>