force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>