force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Freight_Pipeline_Charges__c.field-meta.xml
<CustomField>
    <fullName>RE_Freight_Pipeline_Charges__c</fullName>
    <label>Freight &amp; Pipeline Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>