force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_FX_Laid_Down_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_FX_Laid_Down_Cost__c</fullName>
    <label>FX Laid Down Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>