force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_IsCurrent__c.field-meta.xml
<CustomField>
    <fullName>RE_IsCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrent</label>
    <type>Checkbox</type>
</CustomField>