force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_IsLatest__c.field-meta.xml
<CustomField>
    <fullName>RE_IsLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLatest</label>
    <type>Checkbox</type>
</CustomField>