force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Mark_Up_Credit_Charge__c.field-meta.xml
<CustomField>
    <fullName>RE_Mark_Up_Credit_Charge__c</fullName>
    <label>Mark-Up &amp; Credit Charge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>