force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_PH_FLC_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_FLC_Service_Fee__c</fullName>
    <label>FLC Service Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>