force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_PH_Is_Today__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Is_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Today</label>
    <type>Checkbox</type>
</CustomField>