force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_PH_Parent_Cost_price__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Parent_Cost_price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Cost price</label>
    <referenceTo>RE_MY_CostPrice__c</referenceTo>
    <relationshipLabel>Related Cost Price</relationshipLabel>
    <relationshipName>Cost_Price_History</relationshipName>
    <type>Lookup</type>
</CustomField>