force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_PH_Terminal_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Terminal_Cost__c</fullName>
    <label>Terminal Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>