force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Product_Subgroup__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Subgroup__c</fullName>
    <formula>Text(RE_Product_Name__r.RE_Product_Subgroup__c)</formula>
    <label>Product Subgroup</label>
    <type>Text</type>
</CustomField>