force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Recovery_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>RE_Recovery_Sales_Tax__c</fullName>
    <label>Recovery Sales Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>