force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/RE_Status__c.field-meta.xml
<CustomField>
    <fullName>RE_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready to Upload</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Upload not allowed</fullName>
            </value>
            <value>
                <fullName>Redundant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>