force-app/main/default/objects/RE_MY_CostPriceHistory__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <inlineHelpText>Cost Price System Modstamp</inlineHelpText>
    <label>Cost Price System Modstamp</label>
    <type>DateTime</type>
</CustomField>