force-app/main/default/objects/RE_MY_CostPriceHistory__c/recordTypes/Covamo_Malaysia.recordType-meta.xml
<RecordType>
    <fullName>Covamo_Malaysia</fullName>
    <active>true</active>
    <label>Covamo Malaysia</label>
</RecordType>