force-app/main/default/objects/RE_MY_CostPriceHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Costprice_Laid_Down_Cost__c</columns>
    <columns>RE_Costprice_Marginal_Cost__c</columns>
    <columns>RE_Additive_Cost__c</columns>
    <columns>RE_Market_Premium__c</columns>
    <columns>RE_Oil_Loss__c</columns>
    <columns>RE_Bio_Cost__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Hydrocarbon_Value__c</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Storage_Handling_Cost__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>