force-app/main/default/objects/RE_MY_CostPriceHistory__c/listViews/Canada_Cost_Price.listView-meta.xml
<ListView>
    <fullName>Canada_Cost_Price</fullName>
    <columns>NAME</columns>
    <columns>RE_CND_Effective_From_Date__c</columns>
    <columns>RE_CND_Rack__c</columns>
    <columns>RE_CND_Old_Base_Value__c</columns>
    <columns>RE_CND_Market_Move__c</columns>
    <columns>RE_CND_New_Base_Value__c</columns>
    <columns>RE_Product_Codes__c</columns>
    <columns>RE_Depot_Code__c</columns>
    <columns>RE_CND_Product_Group__c</columns>
    <columns>RE_CND_Group__c</columns>
    <columns>RE_CND_Differential_Basis__c</columns>
    <columns>RE_CND_Pricing_Basis__c</columns>
    <columns>RE_CND_Final_Value__c</columns>
    <columns>RE_Status__c</columns>
    <columns>RE_IsLatest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MY_CostPrice__c.Canada</value>
    </filters>
    <filters>
        <field>RE_CND_Effective_From_Date__c</field>
        <operation>equals</operation>
        <value>5/25/2022</value>
    </filters>
    <filters>
        <field>RE_CND_Rack__c</field>
        <operation>equals</operation>
        <value>Vancouver</value>
    </filters>
    <filters>
        <field>RE_CND_Product_Group__c</field>
        <operation>equals</operation>
        <value>Premium</value>
    </filters>
    <filters>
        <field>RE_Depot_Code__c</field>
        <operation>equals</operation>
        <value>C316</value>
    </filters>
    <filters>
        <field>RE_Product_Codes__c</field>
        <operation>equals</operation>
        <value>400004672</value>
    </filters>
    <label>Canada Cost Price</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>