force-app/main/default/objects/RE_MY_CostPriceHistory__c/listViews/Philippines.listView-meta.xml
<ListView>
    <fullName>Philippines</fullName>
    <columns>NAME</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Freight_Pipeline_Charges__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Costprice_Marginal_Cost__c</columns>
    <columns>RE_Costprice_Laid_Down_Cost__c</columns>
    <columns>RE_Hydrocarbon_Value__c</columns>
    <columns>RE_Market_Premium__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Costprice_Unit__c</columns>
    <columns>RE_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MY_CostPrice__c.Philippines</value>
    </filters>
    <filters>
        <field>RE_Type__c</field>
        <operation>equals</operation>
        <value>M-1</value>
    </filters>
    <filters>
        <field>RE_Depot_Name__c</field>
        <operation>contains</operation>
        <value>PH Tabangao</value>
    </filters>
    <label>Philippines</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Philippines</territoryAndSubordinates>
    </sharedTo>
</ListView>